second commit for task app

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,19 +1,20 @@
-<div class="container">
-  <div class="box">
-    <input type="text" placeholder="enter a task...">
-    <div class="content">
-      <h4>No tasks for today yet</h4>
-      <ul>
-        <li>
-          <span>
-            <i class="far fa-check-square"></i>
-          </span>
-          taskname
-          <span>
-            <i class="fas fa-trash-alt"></i>
-          </span>
-        </li>
-      </ul>
-    </div>
+<div class="app-dashboard">
+  <div class="dash-content">
+      <div class="input-area">
+          <input type="text" placeholder="enter a task...">
+          <button class="add-btn">add</button>
+      </div>
+      <div class="no-tasks-sign">
+          <h5>no tasks for today yet</h5>
+      </div>
+      <div class="task-badge">
+          <ul>
+              <li>
+                  <i class="far fa-check-square"></i>
+                  <p>taskname</p>
+                  <i class="fas fa-trash-alt"></i>
+              </li>
+          </ul>
+      </div>
   </div>
 </div>
