--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,7 @@
-<div class="container">
-  <nav>
-    <div class="text-nav">
-      <h2>Task App</h2>
-      <p>Write, plan & get organized in one place</p>
-    </div>
-    <img src="../../../assets/emoji-img.png">
-  </nav>
+<div class="app-navbar">
+  <div class="navbar-text">
+      <h3>Task App</h3>
+      <p>Manage and track your daily tasks.</p>
+  </div>
+  <img src="../../../assets/emoji-img.png">
 </div>
