--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -1,43 +1,110 @@
-.container {
-  background-color: #f7f7f7;
-  margin: .7rem 0 0 0;
-  display: flex;
+.app-dashboard {
+  background-color: var(--font-color-white);
   border-radius: 40px 40px 0 0;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   position: absolute;
-  flex-flow: column;
-  min-height: 85vh;
+  bottom: 0;
   width: 100vw;
-  box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.179);
+  min-height: 85vh;
 }
 
-.box {
-  /* background-color: darkgreen; */
-  margin: 1rem auto;
-  position: relative;
+.dash-content {
+  /* background-color:tomato ; */
+  margin: 1.5rem 1rem;
+  text-align: center;
+}
+
+.input-area {
+  margin: auto;
+  display: flex;
   width: 90%;
-  text-align: center;
+  flex-direction: column;
 }
 
-h4 {
-  font-family: 'Dancing Script';
-  /* color: #dfdfdf ; */
-  font-size: 1.8rem;
-  text-align: center;
-  /* font-weight: 900; */
-  text-transform: lowercase;
-  color: #444444 ;
-  text-shadow: 2px 5px 5px rgba(0, 0, 0, 0.179);
-}
-
-input {
+.input-area input {
   border: 0;
-  border-bottom: 2px solid #FFB329;
-  /* border-radius: 20px; */
-  text-align: center;
-  width: 90%;
-  line-height: 200%;
-  font-family: 'Lato';
+  border-bottom: 2px solid var(--orange-color);
   background-color: transparent;
+  margin: .5rem;
+  text-align: center;
+  color: var(--input-text);
+  font-family: var(--font-family-content);
   font-size: 1rem;
+  line-height: 150%;
+  outline: none;
 }
 
+::placeholder {
+  color: var(--font-color-grey);
+  font-family: var(--font-family-content);
+}
+
+.input-area .add-btn {
+  border: 0;
+  border-radius: 30px;
+  background-color: var(--orange-color);
+  padding: .4rem 1rem;
+  color: rgb(42, 42, 42);
+  font-family: var(--font-family-title);
+  font-size: 1rem;
+  width: 20%;
+  margin: auto;
+}
+
+.no-tasks-sign {
+  position: fixed;
+  display: flex;
+  bottom: 23em;
+  width: 90%;
+  margin: auto;
+  justify-content: center;
+}
+
+.no-tasks-sign h5 {
+  font-family: var(--font-family-title);
+  font-size: 1.7rem;
+  color: #363636ac;
+  margin: 2rem;
+}
+
+
+.task-badge {
+  position: fixed;
+  display: flex;
+  bottom: 24em;
+  width: 90%;
+  margin: auto;
+  justify-content: center;
+}
+
+.task-badge ul {
+  width: 100%;
+  background-color: rgb(218, 218, 218);
+  box-shadow: var(--text-shadow);
+  height: 2rem;
+  list-style: none;
+  border-radius: 20px;
+  display: flex;
+  margin: 2rem 0;
+}
+
+.task-badge li {
+  width: 100%;
+  margin: 0 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  font-size: 1rem;
+  font-family: calibri;
+  color: rgba(49, 49, 49, 0.721);
+}
+
+.task-badge p {
+  width: 85%;
+  text-align: left;
+}
+
+.task-badge .fa-trash-alt {
+  color: rgb(216, 66, 66);
+}
