--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,47 +1,21 @@
-.container {
-  /* background-color: #69530a; */
-  display: flex;
-  width: 100vw;
-}
-
-nav {
-  width: 95%;
-  /* background-color: brown; */
+.app-navbar {
   display: flex;
   justify-content: space-between;
-  margin: .5rem auto;
+  color: var(--font-color-white);
+  text-shadow: var(--text-shadow);
+  margin: 1rem 1.7rem;
 }
 
-.text-nav {
-  /* background-color: rgb(0, 0, 0); */
-  margin: 1%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.text-nav h2 {
-  /* margin: 1%; */
-  /* background-color: cadetblue; */
-  font-family: 'Dancing Script', cursive;
-  font-size: 2.5rem;
-  color: #f7f7f7 ;
-  text-shadow: 2px 5px 5px rgba(0, 0, 0, 0.179);
-}
-
-.text-nav p {
-  /* margin: 5% 1%; */
-  /* background-color: chartreuse; */
-  font-family: 'Lato', sans-serif;
+.app-navbar p {
+  font-family: var(--font-family-content);
   font-size: .9rem;
-  color: #f7f7f7 ;
-  text-shadow: 2px 5px 5px rgba(0, 0, 0, 0.179);
 }
 
-img {
-  /* background-color: coral; */
-  height: 4rem;
-  margin: 2%;
-  float: right;
-  text-shadow: 2px 5px 5px rgba(0, 0, 0, 0.179);
+.app-navbar h3 {
+  font-family: var(--font-family-title);
+  font-size: 2.5rem;
+}
+
+.app-navbar img {
+  width: 4rem;
 }
