--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 * {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
 }
 
 :root {
@@ -13,6 +13,6 @@
   --font-family-content: 'Lato', sans-serif;
 }
 
-body {
+html {
   background: linear-gradient(323deg, rgba(255,240,121,1) 0%, rgba(255,210,0,1) 36%, rgba(255,156,69,1) 100%) fixed;
 }
