--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-navbar></app-navbar>
-<app-dashboard></app-dashboard>
+<div class="app-section">
+  <app-navbar></app-navbar>
+  <app-dashboard></app-dashboard>
+</div>
