--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -9,7 +9,6 @@
 }
 
 .dash-content {
-  /* background-color:tomato ; */
   margin: 1.5rem 1rem;
   text-align: center;
 }
@@ -39,7 +38,7 @@
   font-family: var(--font-family-content);
 }
 
-.input-area .add-btn {
+.add-btn {
   border: 0;
   border-radius: 30px;
   background-color: var(--orange-color);
@@ -47,14 +46,14 @@
   color: rgb(42, 42, 42);
   font-family: var(--font-family-title);
   font-size: 1rem;
-  width: 20%;
+  width: 4em;
   margin: auto;
 }
 
 .no-tasks-sign {
   position: fixed;
   display: flex;
-  bottom: 23em;
+  bottom: 55vh;
   width: 90%;
   margin: auto;
   justify-content: center;
@@ -67,11 +66,10 @@
   margin: 2rem;
 }
 
-
 .task-badge {
   position: fixed;
   display: flex;
-  bottom: 24em;
+  bottom: 58vh;
   width: 90%;
   margin: auto;
   justify-content: center;
@@ -107,4 +105,16 @@
 
 .task-badge .fa-trash-alt {
   color: rgb(216, 66, 66);
+}
+
+@media (max-width: 290px) {
+  .input-area input,
+  ::placeholder,
+  .input-area .add-btn{
+    font-size: .8rem;
+  }
+
+  .no-tasks-sign h5 {
+
+  }
 }
