--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -9,18 +9,23 @@
 }
 
 .dash-content {
-  margin: 1.5rem 1rem;
+  max-width: 900px;
+  margin: 1.5rem auto;
   text-align: center;
 }
+
+ /* ---------- INPUT AREA ------------ */
 
 .input-area {
   margin: auto;
   display: flex;
   width: 90%;
   flex-direction: column;
+  align-items: center;
 }
 
 .input-area input {
+  width: 100%;
   border: 0;
   border-bottom: 2px solid var(--orange-color);
   background-color: transparent;
@@ -38,20 +43,26 @@
   font-family: var(--font-family-content);
 }
 
+/* ---------- ADD BUTTON --------- */
+
 .add-btn {
+  width: 4em;
+  position: absolute;
+  top: 4rem;
+  padding: .4rem 1rem;
   border: 0;
+
   border-radius: 30px;
   background-color: var(--orange-color);
-  padding: .4rem 1rem;
   color: rgb(42, 42, 42);
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   font-family: var(--font-family-title);
   font-size: 1rem;
-  width: 4em;
-  margin: auto;
 }
 
+/* ----------- NO TASKS TEXT SIGN --------- */
+
 .no-tasks-sign {
-  position: fixed;
   display: flex;
   bottom: 55vh;
   width: 90%;
@@ -66,55 +77,81 @@
   margin: 2rem;
 }
 
+/* ----------- TASK BADGE --------- */
+
 .task-badge {
-  position: fixed;
-  display: flex;
-  bottom: 58vh;
-  width: 90%;
   margin: auto;
-  justify-content: center;
+  display: flex;
+  width: 90%;
 }
 
 .task-badge ul {
   width: 100%;
-  background-color: rgb(218, 218, 218);
-  box-shadow: var(--text-shadow);
-  height: 2rem;
   list-style: none;
-  border-radius: 20px;
   display: flex;
-  margin: 2rem 0;
+  flex-direction: column;
+  margin: 2.5rem 0;
 }
 
 .task-badge li {
-  width: 100%;
-  margin: 0 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  padding: .4rem 1rem;
+  border-radius: 20px;
+  background-color: rgb(218, 218, 218);
 
-  font-size: 1rem;
-  font-family: calibri;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  width: 90%;
+  margin: .4rem auto;
+  display: flex;
+  align-content: center;
+  justify-content: space-between;
   color: rgba(49, 49, 49, 0.721);
 }
 
 .task-badge p {
-  width: 85%;
-  text-align: left;
+  font-size: .8rem;
+  margin: 0 .4rem;
+  font-family: calibri;
+}
+
+/* ----------- FONTAWESOME ICONS ----------- */
+
+.task-badge i {
+  cursor: pointer;
+  font-size: 1rem;
 }
 
 .task-badge .fa-trash-alt {
   color: rgb(216, 66, 66);
 }
 
-@media (max-width: 290px) {
+.task-badge .green-check {
+  color: green;
+}
+
+
+@media (max-width: 280px) {
   .input-area input,
   ::placeholder,
   .input-area .add-btn{
     font-size: .8rem;
   }
 
-  .no-tasks-sign h5 {
+  .task-badge i {
+    font-size: 1rem;
+    height: 15px;
+  }
 
+  .no-tasks-sign h5 {
+    font-size: 1.3rem;
+  }
+}
+
+@media (min-width: 500px) {
+  .task-badge p{
+    font-size: 1rem;
+  }
+
+  .task-badge i {
+    font-size: 1.3rem;
   }
 }
